--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <img src="Github dp.jpg" alt="Profile picture of Melisa Madula">
     <div class="Introduction">
+        <img src="Github dp.jpg" alt="Profile picture of Melisa Madula">
         <h1>Melisa Madula</h1>
         <p>I am a Software Development student, with a passion for learning. Through practice, I am able to note where I need to improve and focus. I hope to successfully reach my goals.</p>
     </div>
