--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     </div>
     <div class="Proficiency">
         <h2>Proficiency</h2>
+        <h3>Beginner <span>Intermediate Advance*</h3>
     </div>
     <div class="Skills">
         <h2>Skills</h2>
@@ -30,6 +31,14 @@
     <div class="Experience">
         <h2>Experience</h2>
     </div>
-    <footer></footer>
+    <footer>
+        <h2>Let's chat! I'm ready to work on exciting projects.</h2>
+        <div class="Contact">
+            <p>melisamadula.mm@gmail.com</p>
+            <p>0665496967</p>
+            <p>LinkedIn Link</p>
+            <p>GitHub Link</p>
+        </div>
+    </footer>
 </body>
 </html>
