--- a/index.html
+++ b/index.html
@@ -15,9 +15,24 @@
     <div class="Proficiency">
         <h2>Proficiency</h2>
         <h3>Beginner <span>Intermediate Advance*</h3>
+            <ul>
+                <li>JavaScript</li>
+                <li>React</li>
+                <li>Node.js</li>
+                <li>HTML + CSS</li>
+            </ul>
     </div>
     <div class="Skills">
         <h2>Skills</h2>
+        <p>Software Development</p>
+        <p>Agile</p>
+        <p>Ui Design</p>
+        <p>Problem Solving</p>
+        <p>Git And Version Control</p>
+        <p>Web Development</p>
+        <p>Team Collaboration</p>
+        <p>Functional Programming</p>
+        <p>RESTful APIs</p>
     </div>
     <div class="Projects">
         <h2>Projects</h2>
