Added Education block information

--- a/index.html
+++ b/index.html
@@ -39,6 +39,38 @@
     </div>
     <div class="Education">
         <h2>Education</h2>
+        <div class="Education-Block-One-Left">
+            <p>June. 2025 - Dec. 2025</p>
+            <p>CodeSpace Academy</p>
+            <p>Software Development</p>
+            <p>Full-time</p>
+        </div>
+        <ul class="Education-Block-One-Rght">
+            <li>Focused on React and JavaScript to build intuitive, dynamic web applications</li>
+            <li>Collaborated with peers on real-world personal projects, refining teamwork and coding best practices</li>
+            <li>Gained hands-on experience with cutting-edge web technologies and development tools</li>
+        </ul>
+        <div class="Education-Block-Two-Left">
+            <p>Feb. 2019 - Dec. 2022</p>
+            <p>CPUT</p>
+            <p>Mechanical Engineering</p>
+            <p>Full-time</p>
+        </div>
+        <ul class="Education-Block-Two-Rght">
+            <li>Gained a strong foundation in mechanical systems and product design principles</li>
+            <li>Spearheaded end-to-end product development, from concept sketches to prototypes</li>
+            <li>Collaborated with cross-functional teams to refine cutting-edge product solutions</li>
+        </ul>
+        <div class="Education-Block-Three-Left">
+            <p>Jan. 2014 - Dec. 2018</p>
+            <p>Hudson Park High</p>
+            <p>Matric</p>
+            <p>NQF Level 4</p>
+        </div>
+        <ul class="Education-Block-Three-Rght">
+            <li>Built core academic skills and developed an early passion for problem-solving</li>
+            <li>Participated in school-wide projects that honed creative and analytical thinking</li>
+        </ul>
     </div>
     <div class="Tools">
         <h2>Tools</h2>
