Added tools with some styling

--- a/index.html
+++ b/index.html
@@ -74,6 +74,35 @@
     </div>
     <div class="Tools">
         <h2>Tools</h2>
+        <nav>
+            <ul class="tools-box">
+                <h4>languages</h4>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </nav>
+        <nav>
+            <ul class="tools-box">
+                <h4>design</h4>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </nav>
+        <nav>
+            <ul class="tools-box">
+                <h4>tools</h4>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </nav>
     </div>
     <div class="Experience">
         <h2>Experience</h2>
