Added basic structure for Experience section

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
             <p>Jan. 2014 - Dec. 2018</p>
             <p>Hudson Park High</p>
             <p>Matric</p>
+            <div class="vertical-line"></div>
             <p>NQF Level 4</p>
         </div>
         <ul class="Education-Block-Three-Rght">
@@ -106,6 +107,42 @@
     </div>
     <div class="Experience">
         <h2>Experience</h2>
+        <div class="Experience-Block-One-Left">
+            <p></p>
+            <p></p>
+            <p>Reader's Haven</p>
+            <div class="vertical-line"></div>
+            <p>Full-time</p>
+        </div>
+        <ul class="Experience-Block-One-Right">
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+        <div class="Experience-Block-Two-Left">
+            <p></p>
+            <p></p>
+            <p>Tech Solutions</p>
+            <div class="vertical-line"></div>
+            <p>Full-time</p>
+        </div>
+        <ul class="Experience-Block-Two-Right">
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+        <div class="Experience-Block-Three-Left">
+            <p></p>
+            <p></p>
+            <p>The Bistro House</p>
+            <div class="vertical-line"></div>
+            <p>Part-time</p>
+        </div>
+        <ul class="Experience-Block-Three-Right">
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
     </div>
     <footer>
         <h2>Let's chat! I'm ready to work on exciting projects.</h2>
