Included Experience details

--- a/index.html
+++ b/index.html
@@ -108,40 +108,34 @@
     <div class="Experience">
         <h2>Experience</h2>
         <div class="Experience-Block-One-Left">
-            <p></p>
-            <p></p>
-            <p>Reader's Haven</p>
-            <div class="vertical-line"></div>
-            <p>Full-time</p>
+            <p>Aug. 2024 - July.2025</p>
+            <p>Bookstore Clerk</p>
+            <p style="display: inline-block;">Reader's Haven <div class="vertical-line"></div> Full-time</p>
         </div>
         <ul class="Experience-Block-One-Right">
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Organized and shelved new arrivals, ensuring a clean and enticing store layout <button>Most Recent</button></li>
+            <li>Assisted customers with personalized book recommendations, boosting sales</li>
+            <li>Handled point-of-sale transactions and updated inventory records</li>
         </ul>
         <div class="Experience-Block-Two-Left">
-            <p></p>
-            <p></p>
-            <p>Tech Solutions</p>
-            <div class="vertical-line"></div>
-            <p>Full-time</p>
+            <p>Jan. 2023 - July. 2024</p>
+            <p style="display: inline-block;">Sales <div class="vertical-line-two"></div> Cell Contracts</p>
+            <p style="display: inline-block;">Tech Solutions <div class="vertical-line"></div> Full-time</p>
         </div>
         <ul class="Experience-Block-Two-Right">
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Advised customers on the best mobile plans and devices, driving consistent contract sign-ups</li>
+            <li>Handled escalated customer inquiries, maintaining high satisfaction ratings</li>
+            <li>Partnered with team members to meet monthly sales targets and achieve store goals</li>
         </ul>
         <div class="Experience-Block-Three-Left">
-            <p></p>
-            <p></p>
-            <p>The Bistro House</p>
-            <div class="vertical-line"></div>
-            <p>Part-time</p>
+            <p>Feb. 2021 - Dec. 2022</p>
+            <p>Waiter</p>
+            <p style="display: inline-block;">The Bistro House <div class="vertical-line"></div> Part-time</p>
         </div>
         <ul class="Experience-Block-Three-Right">
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Delivered attentive table service, promptly addressing guests' needs and requests</li>
+            <li>Promoted menu specials and upsold items to enhance the dining experience</li>
+            <li>Collaborated with kitchen staff to ensure seamless service and timely meal delivery</li>
         </ul>
     </div>
     <footer>
