Page layout taking shape

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 <body>
     <div class="Introduction">
         <img src="Github dp.jpg" alt="Profile picture of Melisa Madula">
-        <h1>Melisa Madula</h1>
-        <p>I am a Software Development student, with a passion for learning. Through practice, I am able to note where I need to improve and focus. I hope to successfully reach my goals.</p>
+        <div class="intro">
+         <h1>Melisa Madula</h1>
+         <p>I am a Software Development student, with a passion for learning. Through practice, I am able to note where I need to improve and focus. I hope to successfully reach my goals.</p>
+        </div>
     </div>
     <div class="Proficiency">
         <h2>Proficiency</h2>
@@ -64,9 +66,7 @@
         <div class="Education-Block-Three-Left">
             <p>Jan. 2014 - Dec. 2018</p>
             <p>Hudson Park High</p>
-            <p>Matric</p>
-            <div class="vertical-line"></div>
-            <p>NQF Level 4</p>
+            <p style="display: inline-block;">Matric <div class="vertical-line"></div> NQF Level 4</p>
         </div>
         <ul class="Education-Block-Three-Rght">
             <li>Built core academic skills and developed an early passion for problem-solving</li>
