Aligned Contact info in Footer

--- a/index.html
+++ b/index.html
@@ -139,12 +139,12 @@
         </ul>
     </div>
     <footer>
-        <h2>Let's chat! I'm ready to work on exciting projects.</h2>
+        <h2 class="message">Let's chat! I'm ready to work on exciting projects.</h2>
         <div class="Contact">
-            <p>melisamadula.mm@gmail.com</p>
-            <p>0665496967</p>
-            <p>LinkedIn Link</p>
-            <p>GitHub Link</p>
+            <p style="display: inline-block;">melisamadula.mm@gmail.com <div class="vertical-line"></div>
+            <p style="display: inline-block;">0665496967 <div class="vertical-line"></div>
+            <p style="display: inline-block;">LinkedIn Link <div class="vertical-line"></div>
+            <p style="display: inline-block;">GitHub Link</p>
         </div>
     </footer>
 </body>
