Fully aligned Experience blocks and corrected container colors

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         </nav>
     </div>
     <div class="Experience">
-        <h2>Experience</h2>
+        <h2 class="ex">Experience</h2>
         <div class="Experience-Block-One">
             <div class="Experience-Block-One-Left">
                 <p>Aug. 2024 - July.2025</p>
@@ -119,7 +119,7 @@
                 <li>Handled point-of-sale transactions and updated inventory records</li>
             </ul>
         </div>
-        <div class="Experience-Block-Two"></div>
+        <div class="Experience-Block-Two">
             <div class="Experience-Block-Two-Left">
                 <p>Jan. 2023 - July. 2024</p>
                 <p style="display: inline-block;">Sales <div class="vertical-line-two"></div> Cell Contracts</p>
