Changed Skills HTML <p> to <ul>

--- a/index.html
+++ b/index.html
@@ -26,15 +26,17 @@
     </div>
     <div class="Skills">
         <h2>Skills</h2>
-        <p>Software Development</p>
-        <p>Agile</p>
-        <p>Ui Design</p>
-        <p>Problem Solving</p>
-        <p>Git And Version Control</p>
-        <p>Web Development</p>
-        <p>Team Collaboration</p>
-        <p>Functional Programming</p>
-        <p>RESTful APIs</p>
+        <ul>
+            <li>Software Development</li>
+            <li>Agile</li>
+            <li>Ui Design</li>
+            <li>Problem Solving</li>
+            <li>Git And Version Control</li>
+            <li>Web Development</li>
+            <li>Team Collaboration</li>
+            <li>Functional Programming</li>
+            <li>RESTful APIs</li>
+        </ul>
     </div>
     <div class="Projects">
         <h2>Projects</h2>
