Fixed hierachy of buttons problem

--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
     <div class="Skills">
         <h2>Skills</h2>
         <ul>
-            <li>Software Development</li>
-            <li>Agile</li>
-            <li>Ui Design</li>
-            <li>Problem Solving</li>
-            <li>Git And Version Control</li>
-            <li>Web Development</li>
-            <li>Team Collaboration</li>
-            <li>Functional Programming</li>
-            <li>RESTful APIs</li>
+            <li><button>Software Development</button></li>
+            <li><button>Agile</button></li>
+            <li><button>Ui Design</button></li>
+            <li><button>Problem Solving</button></li>
+            <li><button>Git And Version Control</button></li>
+            <li><button>Web Development</button></li>
+            <li><button>Team Collaboration</button></li>
+            <li><button>Functional Programming</button></li>
+            <li><button>RESTful APIs</button></li>
         </ul>
     </div>
     <div class="Projects">
@@ -122,7 +122,7 @@
                 <p style="display: inline-block;">Reader's Haven <div class="vertical-line"></div> Full-time</p>
             </div>
             <ul class="Experience-Block-One-Right">
-                <li>Organized and shelved new arrivals, ensuring a clean and enticing store layout <button>Most Recent</button></li>
+                <li>Organized and shelved new arrivals, ensuring a clean and enticing store layout <button style="background-color: #D76239; color: white; border: #D76239; border-radius: 8px;">Most Recent</button></li>
                 <li>Assisted customers with personalized book recommendations, boosting sales</li>
                 <li>Handled point-of-sale transactions and updated inventory records</li>
             </ul>
