--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <div class="Introduction">
-        <img src="Github dp.jpg" alt="Profile picture of Melisa Madula">
+        <img src="Github dp.jpg" alt="Profile picture of Melisa Madula" class="Me">
         <div class="intro">
          <h1>Melisa Madula</h1>
-         <p>I am a Software Development student, with a passion for learning. Through practice, I am able to note where I need to improve and focus. I hope to successfully reach my goals.</p>
+         <p style="color: gray;">I am a passionate and dedicated software developer with a strong foundation in JavaScript and React. With hands-on experience in building dynamics and responsive web applications, I excel at transforming complex requirements into intuitive user interfaces.</p>
         </div>
     </div>
     <div class="Proficiency">
