Corrected Skill layout

--- a/index.html
+++ b/index.html
@@ -26,48 +26,50 @@
     </div>
     <div class="Skills">
         <h2>Skills</h2>
-        <ul>
-            <li><button>Software Development</button></li>
-            <li><button>Agile</button></li>
-            <li><button>Ui Design</button></li>
-            <li><button>Problem Solving</button></li>
-            <li><button>Git And Version Control</button></li>
-            <li><button>Web Development</button></li>
-            <li><button>Team Collaboration</button></li>
-            <li><button>Functional Programming</button></li>
-            <li><button>RESTful APIs</button></li>
-        </ul>
+        <div class="pill">
+            <div class="list" class="a">Software Development</div>
+            <div class="list" class="b">Agile</div>
+            <div class="list" class="c">Ui Design</div>
+            <div class="list" class="d">Problem Solving</div>
+            <div class="list" class="e">Git And Version Control</div>
+            <div class="list" class="f">Web Development</div>
+            <div class="list" class="g">Team Collaboration</div>
+            <div class="list" class="h">Functional Programming</div>
+            <div class="list" class="i">RESTful APIs</div>
+        </div>
     </div>
     <div class="Projects">
-        <h2>Projects</h2>
-        <article class="Portfolio">
-            <h3>2025</h3>
-            <h3>Portfolio Website</h3>
-            <p><strong>Brief:</strong>Developed a personal portfolio website to showcase projects and skills.</p>
-            <p><strong>Technologies:</strong>React, JavaScript, HTML, CSS</p>
-            <p><strong>Responsibilities:</strong>Designed and implemented the website, ensured responsiveness and accessibility.</p>
-        </article>
-        <article class="Podcast">
-            <h3>2025</h3>
-            <h3>Podcast App</h3>
-            <p><strong>Brief:</strong>Developed a podcast application that allows users to search, subscribe, and listen to various podcasts.</p>
-            <p><strong>Technologies:</strong>React, Tailwind, HTML, CSS.</p>
-            <p><strong>Responsibilities:</strong>Implemented search functionality, an audio player with playback controls and integrated backend API for fetching podcast data.</p>
-        </article>
-        <article class="Agile">
-            <h3>2025</h3>
-            <h3>Agile Board</h3>
-            <p><strong>Brief:</strong>Created a task management tool for organizing and tracking tasks..</p>
-            <p><strong>Technologies:</strong>JavaScript, HTML, CSS</p>
-            <p><strong>Responsibilities:</strong>Developed real-time data synchronization, user interface, and user authentication. Implemented data persistence in localStorage.</p>
-        </article>
-        <article class="Super">
-            <h3>2026</h3>
-            <h3>Super Cool Project</h3>
-            <p><strong>Brief:</strong>Developed a incredible application that allows users to do amazing things.</p>
-            <p><strong>Technologies:</strong>React, Tailwind, HTML, CSS.</p>
-            <p><strong>Responsibilities:</strong>Implemented complex functions, a user-friendly user interface, and responsive design. Built our additional features specific to the client's needs.</p>
-        </article>
+        <h2 class="P">Projects</h2>
+        <div class="projected">
+            <article class="Portfolio">
+                <h3>2025</h3>
+                <h3>Portfolio Website</h3>
+                <p><strong>Brief:</strong>Developed a personal portfolio website to showcase projects and skills.</p>
+                <p><strong>Technologies:</strong>React, JavaScript, HTML, CSS</p>
+                <p><strong>Responsibilities:</strong>Designed and implemented the website, ensured responsiveness and accessibility.</p>
+            </article>
+            <article class="Podcast">
+                <h3>2025</h3>
+                <h3>Podcast App</h3>
+                <p><strong>Brief:</strong>Developed a podcast application that allows users to search, subscribe, and listen to various podcasts.</p>
+                <p><strong>Technologies:</strong>React, Tailwind, HTML, CSS.</p>
+                <p><strong>Responsibilities:</strong>Implemented search functionality, an audio player with playback controls and integrated backend API for fetching podcast data.</p>
+            </article>
+            <article class="Agile">
+                <h3>2025</h3>
+                <h3>Agile Board</h3>
+                <p><strong>Brief:</strong>Created a task management tool for organizing and tracking tasks..</p>
+                <p><strong>Technologies:</strong>JavaScript, HTML, CSS</p>
+                <p><strong>Responsibilities:</strong>Developed real-time data synchronization, user interface, and user authentication. Implemented data persistence in localStorage.</p>
+            </article>
+            <article class="Super">
+                <h3>2026</h3>
+                <h3>Super Cool Project</h3>
+                <p><strong>Brief:</strong>Developed a incredible application that allows users to do amazing things.</p>
+                <p><strong>Technologies:</strong>React, Tailwind, HTML, CSS.</p>
+                <p><strong>Responsibilities:</strong>Implemented complex functions, a user-friendly user interface, and responsive design. Built our additional features specific to the client's needs.</p>
+            </article>
+        </div>
     </div>
     <div class="Education">
         <h2 class="ed">Education</h2>
@@ -88,7 +90,7 @@
             <div class="Education-Block-Two-Left">
                 <p>Feb. 2019 - Dec. 2022</p>
                 <p>CPUT</p>
-                <p>Mechanical Engineering</p>
+                <p style="display: inline-block;">Mechanical Engineering <div class="vertical-line"></div></p>
                 <p>Full-time</p>
             </div>
             <ul class="Education-Block-Two-Rght">
@@ -209,10 +211,10 @@
     <footer>
         <h2 class="message">Let's chat! I'm ready to work on exciting projects.</h2>
         <div class="Contact">
-            <p style="display: inline-block;">melisamadula.mm@gmail.com <div class="vertical-line"></div>
-            <p style="display: inline-block;">0665496967 <div class="vertical-line"></div>
-            <p style="display: inline-block;">LinkedIn Link <div class="vertical-line"></div>
-            <p style="display: inline-block;">GitHub Link</p>
+            <p style="display: inline-block;"><a href="mailto:melisamadula.mm@gmail.com" style="text-decoration: none; color: #bbb;">melisamadula.mm@gmail.com</a><div class="vertical-line"></div>
+            <p style="display: inline-block;">0665496967 <div class="vertical-line"></div></p>
+            <p style="display: inline-block;">LinkedIn Link <div class="vertical-line"></div></p>
+            <p style="display: inline-block;"><a href="https://github.com/melisamadula" style="text-decoration: none; color: #bbb;">GitHub Link</a></p>
         </div>
     </footer>
 </body>
