--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
 
     <!--Redo of Tools-->
     <div class="Tools">
-        <h2>Tools</h2>
+        <h2 class="T">Tools</h2>
+        <h4>languages</h4>
         <nav class="tools-box">
-            <h4>languages</h4>
             <img src="css-logo.png" alt="CSS icon">
             <img src="html-logo.png" alt="HTML icon">
             <img src="react-logo.png" alt="React icon">
@@ -124,15 +124,15 @@
             <img src="tailwind-logo.png" alt="Tailwind icon">
             <img src="node-logo.png" alt="node.js icon">
         </nav>
+        <h4>design</h4>
         <nav class="tools-box">
-            <h4>design</h4>
             <img src="icons8-microsoft 1.png" alt="Microsoft icon">
             <img src="logoCreativeCloud.png" alt="Creative Cloud icon">
             <img src="logoFigma.png" alt="Figma icon">
             <img src="icons8-google 1.png" alt="Google icon">
         </nav>
+        <h4>tools</h4>
         <nav class="tools-box">
-            <h4>tools</h4>
             <img src="icons8-npm 1.png" alt="npm icon">
             <img src="icons8-git 1.png" alt="Git icon">
             <img src="icons8-github 1.png" alt="GitHub icon">
