Fixing spelling mistake

--- a/index.html
+++ b/index.html
@@ -114,10 +114,7 @@
 
     <!--Redo of Tools-->
     <div class="Tools">
-        <h2 class="T">Tools</h2>
-        <h4>languages</h4>
-        <nav class="tools-box">
-            <img src="css-logo.png" alt="CSS icon">
+        <h2 class="Tlogo.png" alt="CSS icon">
             <img src="html-logo.png" alt="HTML icon">
             <img src="react-logo.png" alt="React icon">
             <img src="js-logo.png" alt="JavaScript icon">
