Gave Tools images a class

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <img src="Github dp.jpg" alt="Profile picture of Melisa Madula" class="Me">
         <div class="intro">
          <h1>Melisa Madula</h1>
-         <p style="color: gray;">I am a passionate and dedicated software developer with a strong foundation in JavaScript and React. With hands-on experience in building dynamics and responsive web applications, I excel at transforming complex requirements into intuitive user interfaces.</p>
+         <p style="color: gray;">I am a passionate and dedicated software developer with a strong foundation in JavaScript and React. With hands-on experience in building dynamic and responsive web applications, I excel at transforming complex requirements into intuitive user interfaces.</p>
         </div>
     </div>
     <div class="Proficiency">
