Corrected ratio and spacing in header

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
      <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="Introduction">
+    <header>
         <img src="Github dp.jpg" alt="Profile picture of Melisa Madula" class="Me">
         <div class="intro">
-         <h1>Melisa Madula</h1>
+         <h2 class="my-name">Melisa Madula</h2>
          <p style="color: gray;">I am a passionate and dedicated software developer with a strong foundation in JavaScript and React. With hands-on experience in building dynamic and responsive web applications, I excel at transforming complex requirements into intuitive user interfaces.</p>
         </div>
-    </div>
+    </header>
     <div class="Proficiency">
         <h2>Proficiency</h2>
         <h3>Beginner <span>Intermediate Advance*</h3>
@@ -115,25 +115,25 @@
     <!--Redo of Tools-->
     <div class="Tools">
         <h2 class="Tlogo.png" alt="CSS icon">
-            <img src="html-logo.png" alt="HTML icon">
-            <img src="react-logo.png" alt="React icon">
-            <img src="js-logo.png" alt="JavaScript icon">
-            <img src="tailwind-logo.png" alt="Tailwind icon">
-            <img src="node-logo.png" alt="node.js icon">
+            <img src="html-logo.png" alt="HTML icon" class="tool-img">
+            <img src="react-logo.png" alt="React icon" class="tool-img">
+            <img src="js-logo.png" alt="JavaScript icon" class="tool-img">
+            <img src="tailwind-logo.png" alt="Tailwind icon" class="tool-img">
+            <img src="node-logo.png" alt="node.js icon" class="tool-img">
         </nav>
         <h4>design</h4>
         <nav class="tools-box">
-            <img src="icons8-microsoft 1.png" alt="Microsoft icon">
-            <img src="logoCreativeCloud.png" alt="Creative Cloud icon">
-            <img src="logoFigma.png" alt="Figma icon">
-            <img src="icons8-google 1.png" alt="Google icon">
+            <img src="icons8-microsoft 1.png" alt="Microsoft icon" class="tool-img">
+            <img src="logoCreativeCloud.png" alt="Creative Cloud icon" class="tool-img">
+            <img src="logoFigma.png" alt="Figma icon" class="tool-img">
+            <img src="icons8-google 1.png" alt="Google icon" class="tool-img">
         </nav>
         <h4>tools</h4>
         <nav class="tools-box">
-            <img src="icons8-npm 1.png" alt="npm icon">
-            <img src="icons8-git 1.png" alt="Git icon">
-            <img src="icons8-github 1.png" alt="GitHub icon">
-            <img src="icons8-visual-studio 1.png" alt="Visual Studio Code icon">
+            <img src="icons8-npm 1.png" alt="npm icon" class="tool-img">
+            <img src="icons8-git 1.png" alt="Git icon" class="tool-img">
+            <img src="icons8-github 1.png" alt="GitHub icon" class="tool-img">
+            <img src="icons8-visual-studio 1.png" alt="Visual Studio Code icon" class="tool-img">
         </nav>
     </div>
 
