Added Proficiency bars

--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
     <div class="Proficiency">
         <h2>Proficiency</h2>
         <h3>Beginner <span>Intermediate Advance*</h3>
-            <ul>
-                <li>JavaScript</li>
-                <li>React</li>
-                <li>Node.js</li>
-                <li>HTML + CSS</li>
-            </ul>
+            <div class="balance">
+                <ul>
+                    <li class="listed-up">JavaScript <p class="line line-one"></p></li>
+                    <li class="listed-up">React <p class="line line-two"></p></li>
+                    <li class="listed-up">Node.js <p class="line line-three"></p></li>
+                    <li class="listed-up">HTML + CSS <p class="line line-four"></p></li>
+                </ul>
+            </div>
     </div>
     <div class="Skills">
         <h2>Skills</h2>
