Flexed and centered section-one

--- a/index.html
+++ b/index.html
@@ -14,32 +14,34 @@
          <p style="color: gray;">I am a passionate and dedicated software developer with a strong foundation in JavaScript and React. With hands-on experience in building dynamic and responsive web applications, I excel at transforming complex requirements into intuitive user interfaces.</p>
         </div>
     </header>
-    <div class="Proficiency">
-        <h2>Proficiency</h2>
-        <h3>Beginner <span>Intermediate Advance*</h3>
-            <div class="balance">
-                <ul>
-                    <li class="listed-up">JavaScript <p class="line line-one"></p></li>
-                    <li class="listed-up">React <p class="line line-two"></p></li>
-                    <li class="listed-up">Node.js <p class="line line-three"></p></li>
-                    <li class="listed-up">HTML + CSS <p class="line line-four"></p></li>
-                </ul>
-            </div>
-    </div>
-    <div class="Skills">
-        <h2>Skills</h2>
-        <div class="pill">
-            <div class="list" class="a">Software Development</div>
-            <div class="list" class="b">Agile</div>
-            <div class="list" class="c">Ui Design</div>
-            <div class="list" class="d">Problem Solving</div>
-            <div class="list" class="e">Git And Version Control</div>
-            <div class="list" class="f">Web Development</div>
-            <div class="list" class="g">Team Collaboration</div>
-            <div class="list" class="h">Functional Programming</div>
-            <div class="list" class="i">RESTful APIs</div>
+    <section class="section-one">
+        <div class="Proficiency">
+            <h2>Proficiency</h2>
+            <h3>Beginner <span>Intermediate Advance*</h3>
+                <div class="balance">
+                    <ul>
+                        <li class="listed-up">JavaScript <p class="line line-one"></p></li>
+                        <li class="listed-up">React <p class="line line-two"></p></li>
+                        <li class="listed-up">Node.js <p class="line line-three"></p></li>
+                        <li class="listed-up">HTML + CSS <p class="line line-four"></p></li>
+                    </ul>
+                </div>
         </div>
-    </div>
+        <div class="Skills">
+            <h2>Skills</h2>
+            <div class="pill">
+                <div class="list" class="a">Software Development</div>
+                <div class="list" class="b">Agile</div>
+                <div class="list" class="c">Ui Design</div>
+                <div class="list" class="d">Problem Solving</div>
+                <div class="list" class="e">Git And Version Control</div>
+                <div class="list" class="f">Web Development</div>
+                <div class="list" class="g">Team Collaboration</div>
+                <div class="list" class="h">Functional Programming</div>
+                <div class="list" class="i">RESTful APIs</div>
+            </div>
+        </div>
+    </section>
     <div class="Projects">
         <h2 class="P">Projects</h2>
         <div class="projected">
