Centered more of my layout

--- a/index.html
+++ b/index.html
@@ -75,71 +75,73 @@
             </article>
         </div>
     </div>
-    <div class="Education">
-        <h2 class="ed">Education</h2>
-        <div class="Education-Block-One">
-            <div class="Education-Block-One-Left">
-                <p>June. 2025 - Dec. 2025</p>
-                <p>CodeSpace Academy</p>
-                <p>Software Development</p>
-                <p>Full-time</p>
+    <section class="section-two">
+        <div class="Education">
+            <h2 class="ed">Education</h2>
+            <div class="Education-Block-One">
+                <div class="Education-Block-One-Left">
+                    <p>June. 2025 - Dec. 2025</p>
+                    <p>CodeSpace Academy</p>
+                    <p>Software Development</p>
+                    <p>Full-time</p>
+                </div>
+                <ul class="Education-Block-One-Rght">
+                    <li>Focused on React and JavaScript to build intuitive, dynamic web applications</li>
+                    <li>Collaborated with peers on real-world personal projects, refining teamwork and coding best practices</li>
+                    <li>Gained hands-on experience with cutting-edge web technologies and development tools</li>
+                </ul>
             </div>
-            <ul class="Education-Block-One-Rght">
-                <li>Focused on React and JavaScript to build intuitive, dynamic web applications</li>
-                <li>Collaborated with peers on real-world personal projects, refining teamwork and coding best practices</li>
-                <li>Gained hands-on experience with cutting-edge web technologies and development tools</li>
-            </ul>
-        </div>
-        <div class="Education-Block-Two">
-            <div class="Education-Block-Two-Left">
-                <p>Feb. 2019 - Dec. 2022</p>
-                <p>CPUT</p>
-                <p style="display: inline-block;">Mechanical Engineering <div class="vertical-line"></div></p>
-                <p>Full-time</p>
+            <div class="Education-Block-Two">
+                <div class="Education-Block-Two-Left">
+                    <p>Feb. 2019 - Dec. 2022</p>
+                    <p>CPUT</p>
+                    <p style="display: inline-block;">Mechanical Engineering <div class="vertical-line"></div></p>
+                    <p>Full-time</p>
+                </div>
+                <ul class="Education-Block-Two-Rght">
+                    <li>Gained a strong foundation in mechanical systems and product design principles</li>
+                    <li>Spearheaded end-to-end product development, from concept sketches to prototypes</li>
+                    <li>Collaborated with cross-functional teams to refine cutting-edge product solutions</li>
+                </ul>
             </div>
-            <ul class="Education-Block-Two-Rght">
-                <li>Gained a strong foundation in mechanical systems and product design principles</li>
-                <li>Spearheaded end-to-end product development, from concept sketches to prototypes</li>
-                <li>Collaborated with cross-functional teams to refine cutting-edge product solutions</li>
-            </ul>
-        </div>
-        <div class="Education-Block-Three">
-            <div class="Education-Block-Three-Left">
-                <p>Jan. 2014 - Dec. 2018</p>
-                <p>Hudson Park High</p>
-                <p style="display: inline-block;">Matric <div class="vertical-line"></div> NQF Level 4</p>
+            <div class="Education-Block-Three">
+                <div class="Education-Block-Three-Left">
+                    <p>Jan. 2014 - Dec. 2018</p>
+                    <p>Hudson Park High</p>
+                    <p style="display: inline-block;">Matric <div class="vertical-line"></div> NQF Level 4</p>
+                </div>
+                <ul class="Education-Block-Three-Rght">
+                    <li>Built core academic skills and developed an early passion for problem-solving</li>
+                    <li>Participated in school-wide projects that honed creative and analytical thinking</li>
+                </ul>
             </div>
-            <ul class="Education-Block-Three-Rght">
-                <li>Built core academic skills and developed an early passion for problem-solving</li>
-                <li>Participated in school-wide projects that honed creative and analytical thinking</li>
-            </ul>
         </div>
-    </div>
 
-    <!--Redo of Tools-->
-    <div class="Tools">
-        <h2 class="Tlogo.png" alt="CSS icon">
-            <img src="html-logo.png" alt="HTML icon" class="tool-img">
-            <img src="react-logo.png" alt="React icon" class="tool-img">
-            <img src="js-logo.png" alt="JavaScript icon" class="tool-img">
-            <img src="tailwind-logo.png" alt="Tailwind icon" class="tool-img">
-            <img src="node-logo.png" alt="node.js icon" class="tool-img">
-        </nav>
-        <h4>design</h4>
-        <nav class="tools-box">
-            <img src="icons8-microsoft 1.png" alt="Microsoft icon" class="tool-img">
-            <img src="logoCreativeCloud.png" alt="Creative Cloud icon" class="tool-img">
-            <img src="logoFigma.png" alt="Figma icon" class="tool-img">
-            <img src="icons8-google 1.png" alt="Google icon" class="tool-img">
-        </nav>
-        <h4>tools</h4>
-        <nav class="tools-box">
-            <img src="icons8-npm 1.png" alt="npm icon" class="tool-img">
-            <img src="icons8-git 1.png" alt="Git icon" class="tool-img">
-            <img src="icons8-github 1.png" alt="GitHub icon" class="tool-img">
-            <img src="icons8-visual-studio 1.png" alt="Visual Studio Code icon" class="tool-img">
-        </nav>
-    </div>
+        <!--Redo of Tools-->
+        <div class="Tools">
+            <h2 class="Tlogo.png" alt="CSS icon">
+                <img src="html-logo.png" alt="HTML icon" class="tool-img">
+                <img src="react-logo.png" alt="React icon" class="tool-img">
+                <img src="js-logo.png" alt="JavaScript icon" class="tool-img">
+                <img src="tailwind-logo.png" alt="Tailwind icon" class="tool-img">
+                <img src="node-logo.png" alt="node.js icon" class="tool-img">
+            </nav>
+            <h4>design</h4>
+            <nav class="tools-box">
+                <img src="icons8-microsoft 1.png" alt="Microsoft icon" class="tool-img">
+                <img src="logoCreativeCloud.png" alt="Creative Cloud icon" class="tool-img">
+                <img src="logoFigma.png" alt="Figma icon" class="tool-img">
+                <img src="icons8-google 1.png" alt="Google icon" class="tool-img">
+            </nav>
+            <h4>tools</h4>
+            <nav class="tools-box">
+                <img src="icons8-npm 1.png" alt="npm icon" class="tool-img">
+                <img src="icons8-git 1.png" alt="Git icon" class="tool-img">
+                <img src="icons8-github 1.png" alt="GitHub icon" class="tool-img">
+                <img src="icons8-visual-studio 1.png" alt="Visual Studio Code icon" class="tool-img">
+            </nav>
+        </div>
+    </section>
 
     <!-- (Removing my 1st Tools Section to Redo it after Exporting the icons)
     <div class="Tools">
